# mcp-migration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mcp_migration/: __init__.py  cli.py  probe.py  pyscan.py  rules.py  scanner.py  textscan.py
src/mcp_ready/: __init__.py  cli.py  manifests.py  probe.py  report.py  rules.py
tests/: test_cli.py  test_manifests.py  test_probe.py  test_pyscan.py  test_textscan.py
